Basic set up for home page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Whangarei Session</title>
+    <link rel="stylesheet" href="/styles/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1 class="title">Whangarei Session Archive</h1>
+    <header class="header">
+      <nav class="nav">
+        <ul>
+          <li class="nav-item"><a href="tunes.html">Tunes</a></li>
+          <li class="nav-item"><a href="resources.html">Resources</a></li>
+          <li class="nav-item"><a href="articles.html">Articles</a></li>
+          <li class="nav-item"><a href="about.html">About</a></li>
+          <li class="nav-item">
+            <a
+              href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
+              target="_blank"
+              ><img
+                src="./images/facebook.png"
+                alt="facebook logo"
+                width="17"
+                height="17"
+            /></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <img class="img" src="./images/instruments2.jpeg" />
+    <div class="container">
+      <p>
+        Welcome! We’re a collection of musos in the Whangarei area who enjoy
+        playing acoustic trad folk and roots music. We host a weekly session
+        class that teaches tunes, musicianship and etiquette. We also host an
+        advanced session weekly that showcases many tunes included here. Our
+        backgrounds are as diverse as our repertoire which includes new and old
+        tunes from around the world. This site is a place to discover new music
+        and to grow a common repertoire in the community. There are many
+        standards included, as well as unique and interesting pieces that are
+        reflective of our individual tastes. Many of these tunes can be found by
+        searching at thesession.org, irish.session.nz, Spotify or YouTube (to
+        name a few). Explore, expand, and see you out there!
+      </p>
+    </div>
+  </body>
 </html>
