Set up basics for resources.html

--- a/resources.html
+++ b/resources.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Articles</title>
-    <link rel="stylesheet" href="/styles/articles.css" />
+    <title>Resources</title>
+    <link rel="stylesheet" href="/styles/resources.css" />
   </head>
   <body>
     <h1>
@@ -33,18 +33,27 @@
     </header>
     <img class="img" src="./images/instruments2.jpeg" />
     <div class="container">
-      <h2 class="name">Articles</h2>
-      <p class="description">Coming Soon!</p>
+      <h2 class="name">Resources</h2>
       <p class="text">
-        Occasionally there are things for which we like to opine. Hopefully
-        these tips will be helpful &#128521;.
+        There are many great places to learn tunes online. Aside from the
+        abundance of listening options (YouTube, Spotify etc), here are a couple
+        of excellent resources for expanding your repertoire:
       </p>
-      <ul class="articles">
-        <li class="article-content"><a href="">Accompaniment</a></li>
-        <li class="article-content"><a href="">Session Etiquette</a></li>
-        <li class="article-content"><a href="">Tune Titles</a></li>
-        <li class="article-content"><a href="">Tune Versions</a></li>
-        <li class="article-content"><a href="">Ornamentation</a></li>
+      <ul class="resources">
+        <li class="resource-content">
+          <strong>Celtic:</strong>
+          <a href="https://irish.session.nz/">NZ Irish Sessions,</a>
+          <a href="https://thesession.org/">The Session</a>
+        </li>
+        <li class="resource-content">
+          <strong>North America:</strong> <a href=""></a> Coming Soon!
+        </li>
+        <li class="resource-content">
+          <strong>Nordic:</strong><a href=""></a> Coming Soon!
+        </li>
+        <li class="resource-content">
+          <strong>Europe:</strong><a href=""></a> Coming Soon!
+        </li>
       </ul>
     </div>
   </body>
