Adjustments to font sizes to make all pages uniform

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <img class="img" src="./images/instruments2.jpeg" />
     <div class="container">
-      <p>
+      <p class="text">
         Welcome! We’re a collection of musos in the Whangarei area who enjoy
         playing acoustic trad folk and roots music. We host a weekly session
         class that teaches tunes, musicianship and etiquette. We also host an
