--- a/articles.html
+++ b/articles.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Articles</title>
     <link rel="stylesheet" href="/styles/articles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Economica:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h1>
