Changed some css for mobile view

--- a/articles.html
+++ b/articles.html
@@ -39,13 +39,12 @@
     </header>
     <img class="img" src="./images/instruments2.jpeg" />
     <div class="container">
-      <h2 class="name">Articles</h2>
-      <p class="description">Coming Soon!</p>
-      <p class="text">
-        Occasionally there are things for which we like to opine. Hopefully
-        these tips will be helpful &#128521;.
-      </p>
-      <ul class="articles">
+      <div class="centered-content">
+        <h2 class="name">Articles</h2>
+        <p class="description">Coming Soon!</p>
+      </div>
+      <p class="text"></p>
+      <ul class="articles centered-content">
         <li class="article-content"><a href="">Accompaniment</a></li>
         <li class="article-content"><a href="">Session Etiquette</a></li>
         <li class="article-content"><a href="">Tune Titles</a></li>
