Added tune pages, dropdown menu, and made the collective pages more uniform

--- a/resources.html
+++ b/resources.html
@@ -14,37 +14,49 @@
     />
   </head>
   <body>
-    <h1>
-      <a class="title" href="index.html">Whangarei Session</a>
-    </h1>
     <header class="header">
-      <nav>
-        <ul class="nav">
-          <li class="nav-item"><a href="tunes.html">Tunes</a></li>
-          <li class="nav-item"><a href="resources.html">Resources</a></li>
-          <li class="nav-item"><a href="articles.html">Articles</a></li>
-          <li class="nav-item">
-            <a
-              href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
-              target="_blank"
-              ><img
-                src="./images/facebook.png"
-                alt="facebook logo"
-                width="17"
-                height="17"
-            /></a>
-          </li>
-        </ul>
-      </nav>
+      <h1>
+        <a class="title" href="index.html">Whangarei Tunes</a>
+      </h1>
+      <ul class="nav">
+        <li class="nav-item">
+          <a href="tunes.html">Tunes</a>
+          <div class="dropdown-menu">
+            <ul class="dropdown">
+              <li class="dropdown-item">
+                <a href="sessionClass.html">Session Class</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="fridayTunes.html">Friday Tunes</a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="nav-item"><a href="resources.html">Resources</a></li>
+        <li class="nav-item"><a href="articles.html">Articles</a></li>
+        <li class="nav-item">
+          <a
+            href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
+            target="_blank"
+            ><img
+              src="./images/facebook.png"
+              alt="facebook logo"
+              width="17"
+              height="17"
+          /></a>
+        </li>
+      </ul>
     </header>
     <img class="img" src="./images/instruments2.jpeg" />
     <div class="container">
-      <h2 class="name">Resources</h2>
-      <p class="text">
+      <div class="centered-content">
+        <h2 class="name">Resources</h2>
+      </div>
+      <div class="text">
         There are many great places to learn tunes online. Aside from the
         abundance of listening options (YouTube, Spotify etc), here are a couple
-        of excellent resources for expanding your repertoire:
-      </p>
+        of excellent resources for exploring and expanding your repertoire:
+      </div>
       <ul class="resources">
         <li class="resource-content">
           <strong>Celtic:</strong>
