--- a/articles.html
+++ b/articles.html
@@ -14,28 +14,38 @@
     />
   </head>
   <body>
-    <h1>
-      <a class="title" href="index.html">Whangarei Session</a>
-    </h1>
     <header class="header">
-      <nav>
-        <ul class="nav">
-          <li class="nav-item"><a href="tunes.html">Tunes</a></li>
-          <li class="nav-item"><a href="resources.html">Resources</a></li>
-          <li class="nav-item"><a href="articles.html">Articles</a></li>
-          <li class="nav-item">
-            <a
-              href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
-              target="_blank"
-              ><img
-                src="./images/facebook.png"
-                alt="facebook logo"
-                width="17"
-                height="17"
-            /></a>
-          </li>
-        </ul>
-      </nav>
+      <h1>
+        <a class="title" href="index.html">Whangarei Tunes</a>
+      </h1>
+      <ul class="nav">
+        <li class="nav-item">
+          <a href="tunes.html">Tunes</a>
+          <div class="dropdown-menu">
+            <ul class="dropdown">
+              <li class="dropdown-item">
+                <a href="sessionClass.html">Session Class</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="fridayTunes.html">Friday Tunes</a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="nav-item"><a href="resources.html">Resources</a></li>
+        <li class="nav-item"><a href="articles.html">Articles</a></li>
+        <li class="nav-item">
+          <a
+            href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
+            target="_blank"
+            ><img
+              src="./images/facebook.png"
+              alt="facebook logo"
+              width="17"
+              height="17"
+          /></a>
+        </li>
+      </ul>
     </header>
     <img class="img" src="./images/instruments2.jpeg" />
     <div class="container">
@@ -43,14 +53,14 @@
         <h2 class="name">Articles</h2>
         <p class="description">Coming Soon!</p>
       </div>
-      <p class="text"></p>
+      <!-- <p class="text"></p>
       <ul class="articles centered-content">
         <li class="article-content"><a href="">Accompaniment</a></li>
         <li class="article-content"><a href="">Session Etiquette</a></li>
         <li class="article-content"><a href="">Tune Titles</a></li>
         <li class="article-content"><a href="">Tune Versions</a></li>
         <li class="article-content"><a href="">Ornamentation</a></li>
-      </ul>
+      </ul> -->
     </div>
   </body>
 </html>
