--- a/sessionClass.html
+++ b/sessionClass.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tunes</title>
+    <title>Session Class</title>
     <link rel="stylesheet" href="/styles/tunes.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,9 +15,23 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="title">Whangarei Session Tunes</h1>
+      <h1>
+        <a class="title" href="index.html">Whangarei Tunes</a>
+      </h1>
       <ul class="nav">
-        <li class="nav-item"><a href="tunes.html">Tunes</a></li>
+        <li class="nav-item">
+          <a href="tunes.html">Tunes</a>
+          <div class="dropdown-menu">
+            <ul class="dropdown">
+              <li class="dropdown-item">
+                <a href="sessionClass.html">Session Class</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="fridayTunes.html">Friday Tunes</a>
+              </li>
+            </ul>
+          </div>
+        </li>
         <li class="nav-item"><a href="resources.html">Resources</a></li>
         <li class="nav-item"><a href="articles.html">Articles</a></li>
         <li class="nav-item">
@@ -44,13 +58,13 @@
       </div>
       <div class="text">
         <p>
-          The tunes below mostly redirect to either the NZ Irish Session
+          Most of the tunes below redirect to either the NZ Irish Session
           (irish.session.nz) or The Session (thesession.org). Both sites are
           worth checking out as they offer slightly different features. For
           example, The NZ Irish Session allows you to slow a tune down while
           keeping the pitch constant. On The Session, there are usually multiple
           versions, who has recorded the tune, tune name variations, discussion
-          and more.
+          and more. Keep an eye on this page as the list will grow with time.
         </p>
       </div>
       <div>
