--- a/tunes.html
+++ b/tunes.html
@@ -15,10 +15,23 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="title">Whangarei Session Tunes</h1>
-
+      <h1>
+        <a class="title" href="index.html">Whangarei Tunes</a>
+      </h1>
       <ul class="nav">
-        <li class="nav-item"><a href="tunes.html">Tunes</a></li>
+        <li class="nav-item">
+          <a href="tunes.html">Tunes</a>
+          <div class="dropdown-menu">
+            <ul class="dropdown">
+              <li class="dropdown-item">
+                <a href="sessionClass.html">Session Class</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="fridayTunes.html">Friday Tunes</a>
+              </li>
+            </ul>
+          </div>
+        </li>
         <li class="nav-item"><a href="resources.html">Resources</a></li>
         <li class="nav-item"><a href="articles.html">Articles</a></li>
         <li class="nav-item">
