Added a few more tunes

--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -110,7 +110,8 @@
             <a
               href="https://dev.session.nz/tunes-archive/blarney-pilgrim/"
               target="_blank"
-              >Blarney Pilgrim</a
+            >
+              The Blarney Pilgrim</a
             >: Jig, G
           </li>
           <li class="tune-name">
@@ -184,6 +185,13 @@
           </li>
           <li class="tune-name">
             <a
+              href="https://irish.session.nz/tunes-archive/fishers-hornpipe/"
+              target="_blank"
+              >Fisher's</a
+            >: Hornpipe, D
+          </li>
+          <li class="tune-name">
+            <a
               href="https://dev.session.nz/tunes-archive/franks-reel/"
               target="_blank"
               >Frank's</a
@@ -204,7 +212,140 @@
             >: Jig, D mix
           </li>
           <li class="tune-name">
-            <a href="" target="_blank"></a>
+            <a href="https://thesession.org/tunes/49" target="_blank"
+              >The Harvest Home</a
+            >: Hornpipe, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/445" target="_blank"
+              >Itzikel</a
+            >: Frailach, Em
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/off-to-california/"
+              target="_blank"
+              >Going To California</a
+            >: Hornpipe, D
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/jim-wards/"
+              target="_blank"
+              >Jim Wards</a
+            >: Jig, G
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://irish.session.nz/tunes-archive/kesh-jig/"
+              target="_blank"
+              >The Kesh</a
+            >: Jig, G
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/kid-on-the-mountain/"
+              target="_blank"
+              >Kid On The Mountain</a
+            >: Slip jig, Em
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/king-of-the-fairies/"
+              target="_blank"
+              >King Of The Fairies</a
+            >: Hornpipe, Em dor
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/lark-in-the-morning/"
+              target="_blank"
+              >The Lark In The Morning</a
+            >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/72" target="_blank"
+              >The Merry Blacksmith</a
+            >: Reel, D
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/morrisons/"
+              target="_blank"
+              >Morrison's</a
+            >: Jig, Em dor
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/77" target="_blank"
+              >My Love Is In America</a
+            >: Reel, D mix
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://irish.session.nz/tunes-archive/out-on-the-ocean/"
+              target="_blank"
+              >Out On The Ocean</a
+            >: Jig, G
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/pipe-on-the-hob/"
+              target="_blank"
+              >Pipe On The Hob</a
+            >: Jig, Am dor
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/85" target="_blank"
+              >The Rakes Of Mallow</a
+            >: Polka, G
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/2639" target="_blank"
+              >Ramnee Ceilidh</a
+            >: Reel, D
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/reconciliation/"
+              target="_blank"
+              >The Reconciliation</a
+            >: Reel, A
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/rights-of-man/"
+              target="_blank"
+              >Rights Of Man</a
+            >: Hornpipe, Em dor
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/saddle-the-pony/"
+              target="_blank"
+              >Saddle The Pony</a
+            >: Jig, G
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/2320" target="_blank"
+              >Shoe The Donkey</a
+            >: Mazurka, G
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/7905" target="_blank"
+              >Shove The Pig's Foot A Little Closer To The Fire</a
+            >: Reel, G
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/449" target="_blank"
+              >Si Beag Si Mor</a
+            >: Waltz, D
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/st-annes-reel/"
+              target="_blank"
+              >St. Anne's Reel</a
+            >: Reel, D
           </li>
           <li class="tune-name">
             <a href="" target="_blank"></a>
