Added a few more tunes from the session class

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -70,6 +70,11 @@
       <div>
         <ul>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/4997" target="_blank"
+              >Ashoka Farewell</a
+            >: Waltz, D
+          </li>
+          <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/blarney-pilgrim/"
               target="_blank"
@@ -106,6 +111,18 @@
             <a href="https://thesession.org/tunes/2320" target="_blank"
               >Shoe The Donkey</a
             >: Mazurka, G
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/601" target="_blank"
+              >The South Wind</a
+            >: Waltz, G
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/tripping-up-the-stairs/"
+              target="_blank"
+              >Tripping Up The Stairs</a
+            >: Jig, D
           </li>
         </ul>
       </div>
