Adjusted some wording

--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -58,10 +58,12 @@
       </div>
       <div class="text">
         <p>
-          For the most part, only tunes that more than one of us play have been
-          included. This is not a comprehensive list of everyone’s repertoire
-          who participates at Friday Tunes. Keep an eye on this page as the list
-          will grow with time.
+          Here's a sample of some of the tunes played on Fridays at the Irish
+          Wolf. For the most part, only tunes that more than one of us play the
+          melody have been included, so this isn't a comprehensive list of
+          everyone’s repertoire who participates. We'll keep adding things to
+          the list as we discover more shared repertoire and learn new tunes
+          together.
         </p>
       </div>
       <div>
