--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         standards included here, as well as unique and interesting pieces that
         are reflective of our individual tastes and backgrounds. We are
         fortunate for all of the great resources out there today for learning
-        music. Explore, expand, and we hope see you out there!
+        music, so explore, expand, and we hope see you out there!
       </p>
     </div>
   </body>
