--- a/sessionClass.html
+++ b/sessionClass.html
@@ -90,6 +90,13 @@
           </li>
           <li class="tune-name">
             <a
+              href="https://irish.session.nz/tunes-archive/fishers-hornpipe/"
+              target="_blank"
+              >The Foggy Dew</a
+            >: March, Em
+          </li>
+          <li class="tune-name">
+            <a
               href="https://irish.session.nz/tunes-archive/kesh-jig/"
               target="_blank"
               >The Kesh</a
