--- a/sessionClass.html
+++ b/sessionClass.html
@@ -71,7 +71,7 @@
         <ul>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/4997" target="_blank"
-              >Ashoka Farewell</a
+              >Ashokan Farewell</a
             >: Waltz, D
           </li>
           <li class="tune-name">
