Added a few more tunes

--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -231,6 +231,11 @@
             >: Hornpipe, D
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/1812" target="_blank"
+              >Jerusalem Ridge</a
+            >: Reel, Am
+          </li>
+          <li class="tune-name">
             <a
               href="https://dev.session.nz/tunes-archive/jim-wards/"
               target="_blank"
@@ -319,6 +324,11 @@
               target="_blank"
               >Rights Of Man</a
             >: Hornpipe, Em dor
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/91" target="_blank"
+              >The Roaring Barmaid</a
+            >: Jig, G
           </li>
           <li class="tune-name">
             <a
