Added a tune to the session class

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -103,6 +103,11 @@
             >: Jig, G
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/91" target="_blank"
+              >The Music 'O Spey</a
+            >: Strathspey, D
+          </li>
+          <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/out-on-the-ocean/"
               target="_blank"
