Added tunes of the week

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -64,10 +64,26 @@
           example, The NZ Irish Session allows you to slow a tune down while
           keeping the pitch constant. On The Session, there are usually multiple
           versions, who has recorded the tune, tune name variations, discussion
-          and more. Keep an eye on this page as the list will grow with time.
+          and more. Keep an eye on below as the list will grow with time.
+        </p>
+      </div>
+      <div class="tunes-week">
+        <h3 class="centered-content">Tunes of the week:</h3>
+        <p class="tune-name">
+          <a
+            href="https://dev.session.nz/tunes-archive/tripping-up-the-stairs/"
+            target="_blank"
+            >Tripping Up The Stairs</a
+          >,
+          <a
+            href="https://irish.session.nz/tunes-archive/kesh-jig/"
+            target="_blank"
+            >The Kesh</a
+          >
         </p>
       </div>
       <div>
+        <h3 class="centered-content">Session Class Repertoire:</h3>
         <ul>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/4997" target="_blank"
