--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -15,12 +15,14 @@
   </head>
   <body>
     <header class="header">
-      <h1>
-        <a class="title" href="index.html">Whangarei Tunes</a>
-      </h1>
+      <div class="title">
+        <h1 class="title-text">
+          <a href="index.html">Whangarei Tunes</a>
+        </h1>
+      </div>
       <ul class="nav">
         <li class="nav-item">
-          <a href="tunes.html">Tunes</a>
+          <a class="nav-name" href="tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
@@ -32,8 +34,12 @@
             </ul>
           </div>
         </li>
-        <li class="nav-item"><a href="resources.html">Resources</a></li>
-        <li class="nav-item"><a href="articles.html">Articles</a></li>
+        <li class="nav-item">
+          <a class="nav-name" href="resources.html">Resources</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-name" href="articles.html">Articles</a>
+        </li>
         <li class="nav-item">
           <a
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
