--- a/resources.html
+++ b/resources.html
@@ -15,12 +15,14 @@
   </head>
   <body>
     <header class="header">
-      <h1>
-        <a class="title" href="index.html">Whangarei Tunes</a>
-      </h1>
+      <div class="title">
+        <h1 class="title-text">
+          <a href="index.html">Whangarei Tunes</a>
+        </h1>
+      </div>
       <ul class="nav">
         <li class="nav-item">
-          <a href="tunes.html">Tunes</a>
+          <a class="nav-name" href="tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
@@ -32,8 +34,12 @@
             </ul>
           </div>
         </li>
-        <li class="nav-item"><a href="resources.html">Resources</a></li>
-        <li class="nav-item"><a href="articles.html">Articles</a></li>
+        <li class="nav-item">
+          <a class="nav-name" href="resources.html">Resources</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-name" href="articles.html">Articles</a>
+        </li>
         <li class="nav-item">
           <a
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
@@ -59,21 +65,23 @@
       </div>
       <ul class="resources">
         <li class="resource-content">
-          <strong>Celtic:</strong>
+          <h3 class="group">Celtic:</h3>
           <a href="https://irish.session.nz/">NZ Irish Sessions,</a>
           <a href="https://thesession.org/">The Session</a>
         </li>
         <li class="resource-content">
-          <strong>North America:</strong>
+          <h3 class="group">North America:</h3>
           <a href="https://tunearch.org/wiki/TTA"
             >The Traditional Tune Archive</a
           >
         </li>
         <li class="resource-content">
-          <strong>Nordic:</strong><a href=""></a> Coming Soon!
+          <h3 class="group">Nordic:</h3>
+          <a href=""></a> Coming Soon!
         </li>
         <li class="resource-content">
-          <strong>Europe:</strong><a href=""></a> Coming Soon!
+          <h3 class="group">Europe:</h3>
+          <a href=""></a> Coming Soon!
         </li>
       </ul>
     </div>
