Changed desing layout - adding containers for text

--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -58,21 +58,23 @@
       src="./images/instruments2.jpeg"
       alt="picture of acoustic instruments"
     />
+    <div class="centered-content">
+      <h2 class="name">Friday Tunes</h2>
+    </div>
     <div class="container">
-      <div class="centered-content">
-        <h2 class="name">Friday Tunes</h2>
+      <div class="container-content">
+        <div class="text">
+          <p>
+            Here's a sample of some of the tunes played on Fridays at the Irish
+            Wolf. For the most part, only tunes that more than one of us play
+            the melody have been included, so this isn't a comprehensive list of
+            everyone’s repertoire who participates. We'll keep adding things to
+            the list as we discover more shared repertoire and learn new tunes
+            together.
+          </p>
+        </div>
       </div>
-      <div class="text">
-        <p>
-          Here's a sample of some of the tunes played on Fridays at the Irish
-          Wolf. For the most part, only tunes that more than one of us play the
-          melody have been included, so this isn't a comprehensive list of
-          everyone’s repertoire who participates. We'll keep adding things to
-          the list as we discover more shared repertoire and learn new tunes
-          together.
-        </p>
-      </div>
-      <div>
+      <div class="tunes-list">
         <ul>
           <li class="tune-name">
             <a
@@ -189,7 +191,7 @@
               href="https://dev.session.nz/tunes-archive/finnish-polka/"
               target="_blank"
               >The Finnish</a
-            >: Polka, Em dor
+            >: Polka, Bm dor
           </li>
           <li class="tune-name">
             <a
