--- a/sessionClass.html
+++ b/sessionClass.html
@@ -58,22 +58,25 @@
       src="./images/instruments2.jpeg"
       alt="picture of acoustic instruments"
     />
+    <div class="centered-content">
+      <h2 class="name">Session Class Tunes</h2>
+    </div>
     <div class="container">
-      <div class="centered-content">
-        <h2 class="name">Session Class Tunes</h2>
+      <div class="container-content">
+        <div class="text">
+          <p>
+            Most of the tunes below redirect to either the NZ Irish Session
+            (irish.session.nz) or The Session (thesession.org). Both sites are
+            worth checking out as they offer slightly different features. For
+            example, The NZ Irish Session allows you to slow a tune down while
+            keeping the pitch constant. On The Session, there are usually
+            multiple versions, who has recorded the tune, tune name variations,
+            discussion and more. Keep an eye on below as the list will grow with
+            time.
+          </p>
+        </div>
       </div>
-      <div class="text">
-        <p>
-          Most of the tunes below redirect to either the NZ Irish Session
-          (irish.session.nz) or The Session (thesession.org). Both sites are
-          worth checking out as they offer slightly different features. For
-          example, The NZ Irish Session allows you to slow a tune down while
-          keeping the pitch constant. On The Session, there are usually multiple
-          versions, who has recorded the tune, tune name variations, discussion
-          and more. Keep an eye on below as the list will grow with time.
-        </p>
-      </div>
-      <div class="tunes-week">
+      <div class="tunes-week tunes-container">
         <h3 class="centered-content name">Tunes of the week:</h3>
         <p class="tune-name">
           <a
@@ -111,9 +114,7 @@
             >: Hornpipe, D
           </li>
           <li class="tune-name">
-            <a
-              href="https://irish.session.nz/tunes-archive/fishers-hornpipe/"
-              target="_blank"
+            <a href="https://thesession.org/tunes/2516" target="_blank"
               >The Foggy Dew</a
             >: March, Em
           </li>
@@ -125,7 +126,7 @@
             >: Jig, G
           </li>
           <li class="tune-name">
-            <a href="https://thesession.org/tunes/91" target="_blank"
+            <a href="https://thesession.org/tunes/16649" target="_blank"
               >The Music 'O Spey</a
             >: Strathspey, D
           </li>
