--- a/tunes.html
+++ b/tunes.html
@@ -54,29 +54,32 @@
       </ul>
     </header>
     <img class="img" src="./images/instruments2.jpeg" />
+    <div class="centered-content">
+      <h2 class="name">Tunes</h2>
+    </div>
     <div class="container">
-      <div class="centered-content">
-        <h2 class="name">Tunes</h2>
-      </div>
-      <div class="text">
-        <a href="sessionClass.html" class="group">Session Class</a>: These are
-        the tunes that we've taught each other and played together at the Monday
-        Session Class at the Old Library. They're a good starting point for
-        those just beginning their journey with trad music, however these tunes
-        are not 'just' for beginners! It's also a resource for those who'd like
-        to learn the local repertoire. Hopefully we'll learn each other's tunes
-        and have a lot to play when we come together. Keep an eye on the
-        <a href="sessionClass.html">Session Class</a> page to stay current with
-        the community repertoire.
-      </div>
-      <br />
-      <div class="text">
-        <a href="fridayTunes.html" class="group">Friday Tunes</a>: These tunes
-        are a bit more diverse and cover most of what's been played at Friday
-        Tune Time at the Irish Wolf. They're not necessarily more challenging to
-        execute but do tend to get played at full speed with variations and
-        ornamentation. We encourage you to make them part of your repertoire and
-        possibly join us sometime!
+      <div class="container-content">
+        <div class="text">
+          <a href="sessionClass.html" class="group">Session Class</a>: These are
+          the tunes that we've taught each other and played together at the
+          Monday Session Class at the Old Library. They're a good starting point
+          for those just beginning their journey with trad music, however these
+          tunes are not 'just' for beginners! It's also a resource for those
+          who'd like to learn the local repertoire. Hopefully we'll learn each
+          other's tunes and have a lot to play when we come together. Keep an
+          eye on the
+          <a class="group" href="sessionClass.html">Session Class</a> page to
+          stay current with the community repertoire.
+        </div>
+        <br />
+        <div class="text">
+          <a href="fridayTunes.html" class="group">Friday Tunes</a>: These tunes
+          are a bit more diverse and cover most of what's been played at Friday
+          Tune Time at the Irish Wolf. They're not necessarily more challenging
+          to execute but do tend to get played at full speed with variations and
+          ornamentation. We encourage you to make them part of your repertoire
+          and possibly join us sometime!
+        </div>
       </div>
     </div>
   </body>
