Added new tunes of the week

--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -131,9 +131,21 @@
             >: March, Am
           </li>
           <li class="tune-name">
+            <a
+              href="https://irish.session.nz/tunes-archive/breetches-full-of-stitches/"
+              target="_blank"
+              >The Britches Full Of Stitches</a
+            >: Polka, A
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/10" target="_blank"
               >The Butterfly</a
             >: Slip-jig, Em
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/15" target="_blank"
+              >Calliope House</a
+            >: Jig, D
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/15454" target="_blank"
@@ -183,7 +195,7 @@
               href="https://dev.session.nz/tunes-archive/finnish-polka/"
               target="_blank"
               >The Finnish</a
-            >: Polka, Em dor
+            >: Polka, Bm dor
           </li>
           <li class="tune-name">
             <a
@@ -269,6 +281,16 @@
               target="_blank"
               >The Lark In The Morning</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/2221" target="_blank"
+              >MacArthur Road</a
+            >: Reel, E
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/7041" target="_blank"
+              >Macedonian Oro</a
+            >: Horo, A
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/72" target="_blank"
