--- a/sessionClass.html
+++ b/sessionClass.html
@@ -70,15 +70,11 @@
       <div class="tunes-week">
         <h3 class="centered-content">Tunes of the week:</h3>
         <p class="tune-name">
-          <a
-            href="https://dev.session.nz/tunes-archive/tripping-up-the-stairs/"
-            target="_blank"
-            >Tripping Up The Stairs</a
+          <a href="https://thesession.org/tunes/10" target="_blank"
+            >The Butterfly</a
           >,
-          <a
-            href="https://irish.session.nz/tunes-archive/kesh-jig/"
-            target="_blank"
-            >The Kesh</a
+          <a href="https://thesession.org/tunes/106" target="_blank"
+            >The Swallowtail</a
           >
         </p>
       </div>
