Move some tunes around between session class and friday tunes

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -86,12 +86,31 @@
               >Ashokan Farewell</a
             >: Waltz, D
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/blarney-pilgrim/"
               target="_blank"
               >The Blarney Pilgrim</a
             >: Jig, G
+          </li> -->
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/boys-of-blue-hill/"
+              target="_blank"
+              >The Boys Of Bluehill</a
+            >: Hornpipe, D
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/brian-borus-march-3-part/"
+              target="_blank"
+              >Brian Boru's</a
+            >: March, Am
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/10" target="_blank"
+              >The Butterfly</a
+            >: Slip jig, Em
           </li>
           <li class="tune-name">
             <a
@@ -106,6 +125,11 @@
             >: March, Em
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/49" target="_blank"
+              >The Harvest Home</a
+            >: Hornpipe, D
+          </li>
+          <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/kesh-jig/"
               target="_blank"
@@ -113,9 +137,23 @@
             >: Jig, G
           </li>
           <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/king-of-the-fairies/"
+              target="_blank"
+              >King Of The Fairies</a
+            >: Hornpipe, Em dor
+          </li>
+          <!-- <li class="tune-name">
             <a href="https://thesession.org/tunes/16649" target="_blank"
               >The Music 'O Spey</a
             >: Strathspey, D
+          </li> -->
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/off-to-california/"
+              target="_blank"
+              >Off To California</a
+            >: Hornpipe, D
           </li>
           <li class="tune-name">
             <a
@@ -130,6 +168,20 @@
             >: Polka, G
           </li>
           <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/rights-of-man/"
+              target="_blank"
+              >Rights Of Man</a
+            >: Hornpipe, Em dor
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/st-annes-reel/"
+              target="_blank"
+              >St. Anne's Reel</a
+            >: Reel, D
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/2320" target="_blank"
               >Shoe The Donkey</a
             >: Mazurka, G
@@ -138,6 +190,11 @@
             <a href="https://thesession.org/tunes/601" target="_blank"
               >The South Wind</a
             >: Waltz, G
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/106" target="_blank"
+              >The Swallowtail</a
+            >: Jig, Em
           </li>
           <li class="tune-name">
             <a
