Added new tunes of the week and up next

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -70,11 +70,26 @@
       <div class="tunes-week">
         <h3 class="centered-content">Tunes of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/10" target="_blank"
-            >The Butterfly</a
+          <a
+            href="https://dev.session.nz/tunes-archive/drowsy-maggie-cm/"
+            target="_blank"
+            >Drowsy Maggie</a
           >,
-          <a href="https://thesession.org/tunes/106" target="_blank"
-            >The Swallowtail</a
+          <a
+            href="https://dev.session.nz/tunes-archive/josefins-waltz/"
+            target="_blank"
+            >Josefin's Waltz</a
+          >
+        </p>
+        <!-- </div>
+      <div class="tunes-week"> -->
+        <h3 class="centered-content">Up Next:</h3>
+        <p class="tune-name">
+          <a href="https://thesession.org/tunes/7905" target="_blank"
+            >Shove The Pig's Foot A Little Closer To The Fire</a
+          >,
+          <a href="https://thesession.org/tunes/14300" target="_blank"
+            >Angeline The Baker</a
           >
         </p>
       </div>
@@ -114,6 +129,13 @@
           </li>
           <li class="tune-name">
             <a
+              href="https://dev.session.nz/tunes-archive/drowsy-maggie-cm/"
+              target="_blank"
+              >Drowsy Maggie</a
+            >: Reel, Em dor
+          </li>
+          <li class="tune-name">
+            <a
               href="https://irish.session.nz/tunes-archive/fishers-hornpipe/"
               target="_blank"
               >Fisher's</a
@@ -128,6 +150,13 @@
             <a href="https://thesession.org/tunes/49" target="_blank"
               >The Harvest Home</a
             >: Hornpipe, D
+          </li>
+          <li class="tune-name">
+            <a
+              href="https://dev.session.nz/tunes-archive/josefins-waltz/"
+              target="_blank"
+              >Josefin's Waltz</a
+            >: Waltz, D
           </li>
           <li class="tune-name">
             <a
