--- a/resources.html
+++ b/resources.html
@@ -54,36 +54,39 @@
       </ul>
     </header>
     <img class="img" src="./images/instruments2.jpeg" />
+    <div class="centered-content">
+      <h2 class="name">Resources</h2>
+    </div>
     <div class="container">
-      <div class="centered-content">
-        <h2 class="name">Resources</h2>
+      <div class="container-content">
+        <div class="text">
+          There are many great places to learn tunes online. Aside from the
+          abundance of listening options (YouTube, Spotify etc), here are a
+          couple of excellent resources for exploring and expanding your
+          repertoire:
+        </div>
+        <ul class="resources">
+          <li class="resource-content">
+            <h3 class="group">Celtic:</h3>
+            <a href="https://irish.session.nz/">NZ Irish Sessions,</a>
+            <a href="https://thesession.org/">The Session</a>
+          </li>
+          <li class="resource-content">
+            <h3 class="group">North America:</h3>
+            <a href="https://tunearch.org/wiki/TTA"
+              >The Traditional Tune Archive</a
+            >
+          </li>
+          <li class="resource-content">
+            <h3 class="group">Nordic:</h3>
+            <a href=""></a> Coming Soon!
+          </li>
+          <li class="resource-content">
+            <h3 class="group">Europe:</h3>
+            <a href=""></a> Coming Soon!
+          </li>
+        </ul>
       </div>
-      <div class="text">
-        There are many great places to learn tunes online. Aside from the
-        abundance of listening options (YouTube, Spotify etc), here are a couple
-        of excellent resources for exploring and expanding your repertoire:
-      </div>
-      <ul class="resources">
-        <li class="resource-content">
-          <h3 class="group">Celtic:</h3>
-          <a href="https://irish.session.nz/">NZ Irish Sessions,</a>
-          <a href="https://thesession.org/">The Session</a>
-        </li>
-        <li class="resource-content">
-          <h3 class="group">North America:</h3>
-          <a href="https://tunearch.org/wiki/TTA"
-            >The Traditional Tune Archive</a
-          >
-        </li>
-        <li class="resource-content">
-          <h3 class="group">Nordic:</h3>
-          <a href=""></a> Coming Soon!
-        </li>
-        <li class="resource-content">
-          <h3 class="group">Europe:</h3>
-          <a href=""></a> Coming Soon!
-        </li>
-      </ul>
     </div>
   </body>
 </html>
